[package]
name = "example01"
version = "0.1.0"
authors = ["arden <arden@tujiao.com>"]
workspace = ".."
edition = "2018"


[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "display"
path = "src/display.rs"

[[bin]]
name = "comments"
path = "src/comments.rs"

[[bin]]
name = "debug"
path = "src/debug.rs"

[[bin]]
name = "formatted_print"
path = "src/formatted_print.rs"

[[bin]]
name = "formatting"
path = "src/formatting.rs"

[[bin]]
name = "testcase_list"
path = "src/testcase_list.rs"

[dependencies]
